--- a/音乐播放器/yinyue/index.html
+++ b/音乐播放器/yinyue/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>音乐播放器</title>
 		<style>
 			*{margin:0; padding:0;}
 			i{font-style: normal;}
